# SPL-01-Project

./: README.md  md5.cpp  md5_functions.cpp
All Files/: SPL-1 Final Report .docx  SPL1 Final Project Proposal .docx
Final Code For SPL/: CMakeLists.txt  Decode_Malicious_File.h  Delete_Malicious_File.h  Encode_Malicious_File.h  MD5_Hashing_Algorithm.h  Main_File.h  PE_Header_Parsing.h  StaticAnalysis.cpp  Trie_DataStructure.h
MalwareSample/: malware2.doc
Old Codes/: functions.h  main.cpp  md5_functions_header.h
